# YT_RAG

./: .gitignore  pyproject.toml
config/: logging_config.yaml  model_config.yaml  prompt_templates.yaml
frontend/: manifest.json  popup.css  popup.html  popup.js
frontend/frontend_old/: popup.html
frontend/yt_rag/: package-lock.json  package.json
frontend/yt_rag/public/: manifest.json
frontend/yt_rag/src/: App.tsx
notebooks/: Test_YT-dlp_ffmpeg.ipynb  response_analysis.ipynb  testing_performance.ipynb
src/core/: auth.json  main.py
src/core/database/: db_helpers.py  test.ipynb
src/core/lib/: auth.py
src/handlers/: error_handler.py
src/llm/: claude_client.py  gpt_client.py  utils.py
src/llm/prompt_engineering/: chainer.py
src/utils/: logger.py  rate_limiter.py  token_counter.py
src/yt_rag/: app.py  main.py  processors.py  test.ipynb  transcript_dZ19NAbUISs.json
src/yt_rag/collect_frames_and_push/: collect_and_push.py  test.ipynb
src/yt_rag/framers_extractor/: collect_frames.py  test.ipynb  yt_dlp_video_info.py
src/yt_rag/frames/: collect_frames.py  test.py
src/yt_rag/llm/: base.py  testing.ipynb
src/yt_rag/llm_service/: cleaningextracted_data.py  gemini_llmservice.py  summarize_transcript.py  system_prompt.py  test.ipynb
src/yt_rag/transcript/: chunking.py  fallback_transcript_extraction.py  playwright_scraper.py  test.py  transcript1.json
src/yt_rag/utils/: cache.py
src/yt_rag/vector_store/: create_embeddings.py  custome_qdrant_client.py  custome_qdrent_client.py  embeddings.py  fast_embeddings.py  pg_vector_helpers.py  test.ipynb  (+7 more)
(+17 files in other folders)
