[project]
name = "yt-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.62.0",
    "dvc-s3>=3.2.2",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.6",
    "mlflow>=3.3.1",
    "opik>=1.8.33",
    "pinecone>=7.3.0",
    "python-dotenv>=1.1.1",
]
