[project]
name = "yt-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.62.0",
    "dvc-s3>=3.2.2",
    "fastembed>=0.7.1",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.6.6",
    "llama-index>=0.13.3",
    "llama-index-embeddings-clip>=0.5.0",
    "llama-index-multi-modal-llms-openai>=0.6.0",
    "llama-index-vector-stores-lancedb>=0.4.0",
    "mlflow>=3.3.1",
    "opik>=1.8.33",
    "pinecone>=7.3.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "replicate>=1.0.7",
    "yt-dlp>=2025.8.22",
]
